# a-recursive-root

./: requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  governance.yml
containers/base/: Dockerfile
containers/languages/node/: Dockerfile
containers/languages/python/: Dockerfile
containers/services/postgres/: Dockerfile
containers/services/redis/: Dockerfile
scripts/: suggest_sub_issues.py
templates/: requirements.txt
tests/: test_main.py
workspace/orgs/CoreSystems/cli-tools/.devcontainer/: Dockerfile
workspace/orgs/CoreSystems/os-kernel/.devcontainer/: Dockerfile
workspace/projects/ai-council-system/: requirements.txt
workspace/projects/ai-council-system/blockchain/contracts/solana/council_selection/: Cargo.toml
workspace/projects/ai-council-system/blockchain/contracts/solana/voting/: Cargo.toml
workspace/projects/ai-council-system/web/frontend/: package.json
