[package]
name = "council-selection"
version = "0.1.0"
description = "AI Council Selection Smart Contract with VRF"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "council_selection"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
